# facebook-deal-finder

./: cleaned-fb-scrapper.py  facebook-scrapper-main.ipynb  fb-scrapper-full.py  fb-scrapper-main.ipynb  fb-scrapper.py  notebook-cleaner.py  pyproject.toml  scrapper-full.py  scrapper-main.ipynb  scrapperTutorialYT.ipynb
